<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:title="Dashboard" />
    <item
        android:id="@+id/configFragment"
        android:title="Config." />
    <item
        android:id="@+id/profileFragment"
        android:title="Profile" />
</menu>